[tool.poetry]
name = "tws"
version = "0.1.0"
description = ""
authors = ["Carlos Marx <me@carlosmarx.com>"]
readme = "README.md"
packages = [{include = "tws", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
